--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -21,17 +21,26 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
-tonic = {version = "0.7", features = ["tls", "default", "channel", "tls-roots"]}
-prost = "0.10"
-prost-types = "0.10"
+tokio-rustls = {version = "0.24.0", features = ["default", "dangerous_configuration"] }
+tonic = {version = "0.9.0", features = ["tls", "default", "channel", "tls-roots"]}
+prost = "0.11.8"
+prost-types = "0.11.8"
+
 thiserror = "1.0"
-slog = {version = "2.7.0", features=["max_level_trace", "release_max_level_info"]}
-slog-term = "2.9.0"
-slog-async = "2.7.0"
+anyhow = "1.0.70"
 parking_lot = "0.12"
 hmac = "0.12"
 hostname = "0.3.1"
-tokio-rustls = {version = "0.23", features = ["default", "dangerous_configuration"] }
+
+slog = {version = "2.7.0", features=["max_level_trace", "release_max_level_info"]}
+slog-term = "2.9.0"
+slog-async = "2.7.0"
+slog-json = "2.6.1"
+
+opentelemetry = { version = "0.19.0", features = ["metrics", "rt-tokio"] }
+opentelemetry-otlp = { version = "0.12.0", features = ["metrics", "grpc-tonic"] }
+
+minitrace = "0.4.1"
 
 [build-dependencies]
-tonic-build = "0.7"
+tonic-build = "0.9.0"
